[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MDOFModel"
version = "0.1.2"
authors = [
    {name = "Tian You", email = "youtian@njtech.edu.cn"},
]
description = "Generate MDOF lumped mass FE model using basic building information"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "openseespy",
    "openpyxl",
    "eqsig",
]

[project.urls]
"Homepage" = "https://github.com/youtian95/MDOFModel"
"Bug Tracker" = "https://github.com/youtian95/MDOFModel/issues"

[tool.hatch.build.targets.wheel]
packages = ["MDOFModel"]